# viz-web-framework

./: .cirrus.yml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
examples/: Cargo.toml  README.md  hello-smol.rs  hello.rs
examples/app/: Cargo.toml
examples/app/public/: app.js
examples/app/src/: main.rs
examples/async-graphql/: Cargo.toml
examples/async-graphql/src/: main.rs
examples/async-graphql/src/starwars/: mod.rs  model.rs
examples/compression/: Cargo.toml
examples/compression/src/: main.rs
examples/config/: dev.toml
examples/cookies/: Cargo.toml
examples/cookies/src/: main.rs
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/csrf/: Cargo.toml
examples/csrf/src/: main.rs
examples/databases/sea-orm/: Cargo.toml  README.md
examples/databases/sea-orm/src/: main.rs
examples/error-handling/: Cargo.toml
examples/error-handling/src/: main.rs
examples/forms/: Cargo.toml
examples/forms/form/: Cargo.toml  index.html
examples/forms/form/src/: main.rs
examples/forms/multipart/: Cargo.toml  index.html
examples/forms/multipart/src/: main.rs
examples/forms/src/: main.rs
examples/graceful-shutdown/: Cargo.toml
examples/graceful-shutdown/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/htmlx/: Cargo.toml
examples/htmlx/src/: main.rs
examples/htmlx/templates/: index.html  todos.html
examples/limits/: Cargo.toml
examples/limits/src/: main.rs
examples/multipart/: Cargo.toml
examples/multipart/src/: main.rs
examples/oauth/: Cargo.toml
examples/oauth/src/: main.rs
examples/otel/metrics/: Cargo.toml
examples/otel/metrics/src/: main.rs
examples/otel/tracing/: Cargo.toml
examples/otel/tracing/src/: main.rs
examples/routing/openapi/: Cargo.toml  README.md
examples/routing/openapi/src/: main.rs
examples/routing/todos/: Cargo.toml
examples/routing/todos/src/: main.rs
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs
examples/serve/: Cargo.toml
examples/serve/src/: main.rs
examples/session/: Cargo.toml
examples/session/src/: main.rs
examples/sessions/: Cargo.toml
examples/sessions/src/: main.rs
examples/sse/: Cargo.toml  index.html
examples/sse/src/: main.rs
examples/static-files/embed/: Cargo.toml
examples/static-files/embed/src/: main.rs
examples/static-files/include-dir/: Cargo.toml
examples/static-files/include-dir/src/: main.rs
examples/static-files/serve/: Cargo.toml
examples/static-files/static-embed/: Cargo.toml
examples/static-routes/: Cargo.toml
examples/static-routes/src/: main.rs
examples/templates/: Cargo.toml  README.md
examples/templates/askama/: Cargo.toml
examples/templates/markup/: Cargo.toml
examples/templates/maud/: Cargo.toml
examples/templates/minijinja/: Cargo.toml
examples/templates/src/: main.rs
examples/templates/tera/: Cargo.toml
examples/tls/: Cargo.toml  cert.pem  identity.p12  key.pem
examples/tls/src/: cert.cer  key.rsa  main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
examples/unix-domain-socket/: Cargo.toml
examples/unix-domain-socket/src/: main.rs
examples/unix-socket/: Cargo.toml
examples/unix-socket/src/: main.rs
examples/websocket-chat/: Cargo.toml  index.html
examples/websocket-chat/src/: main.rs
viz/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
viz-core/: Cargo.toml  LICENSE-MIT  README.md
viz-core/src/: .handler.rs.rustfmt  .ws.rs.swp  body.rs  config.rs  context.rs  error.rs  extract.rs  from_request.rs  guard.rs  handler.rs  into_response.rs  lib.rs  macros.rs  middleware.rs  request.rs  response.rs  sse.rs  types.rs  ws.rs
viz-core/src/config/: config.rs  cookies.rs  env.rs  limits.rs  mod.rs
viz-core/src/context/: from_context.rs  mod.rs
viz-core/src/fs/: mod.rs  template.rs
viz-core/src/handler/: after.rs  and_then.rs  around.rs  before.rs  boxed.rs  catch_error.rs  catch_unwind.rs  either.rs  fn_ext.rs  fn_ext_hanlder.rs  handler.rs  into_handler.rs  map.rs  map_err.rs  map_into_response.rs  mod.rs  or_else.rs  responder.rs  responder_ext.rs  transform.rs
viz-core/src/middleware/: compression.rs  cookie.rs  cors.rs  csrf.rs  helper.rs  limits.rs  mod.rs
viz-core/src/request/: mod.rs
viz-core/src/response/: mod.rs
viz-core/src/types/: cookie.rs  cookies.rs  data.rs  form.rs  header.rs  json.rs  limits.rs  mod.rs  multipart.rs  params.rs  payload.rs  query.rs  realip.rs  session.rs  state.rs
viz-core/tests/: body.rs  error.rs  from_request.rs  handler.rs  realip.rs  request.rs  response.rs  test.rs  type_json.rs  type_realip.rs
viz-core/tests/types/: payload.rs  realip.rs
viz-core/tests/ui/: handler.rs
viz-handle/: Cargo.toml  README.md
viz-handle/src/: lib.rs
viz-handlers/: Cargo.toml  README.md
viz-handlers/src/: embed.rs  lib.rs  serve.rs
viz-handlers/src/embed/: mod.rs
viz-handlers/src/prometheus/: mod.rs
viz-handlers/src/serve/: directory.rs  error.rs  list.tpl  mod.rs
viz-macros/: Cargo.toml  README.md
viz-macros/src/: lib.rs
viz-macros/tests/: handler.rs
viz-middleware/: Cargo.toml
viz-middleware/src/: compression.rs  cookies.rs  cors.rs  jwt.rs  lib.rs  logger.rs  recover.rs  request_id.rs  session.rs  sessions.rs  timeout.rs
viz-middleware/src/auth/: basic.rs  bearer.rs  mod.rs
viz-router/: Cargo.toml  LICENSE-APACHE  README.md
viz-router/src/: handler.rs  lib.rs  method.rs  resource.rs  resources.rs  route.rs  router.rs  tree.rs
viz-router/src/params/: de.rs  mod.rs
viz-router/src/route/: ext.rs  mod.rs
viz-utils/: Cargo.toml  README.md
viz-utils/src/: lib.rs
viz/src/: app.rs  lib.rs  responder.rs  serve.rs  server.rs  service.rs  tls.rs
viz/src/middleware/: compression.rs  cookies.rs  cors.rs  logger.rs  mod.rs  recover.rs  request_id.rs  session.rs  timeout.rs
viz/src/server/: listener.rs  mod.rs  responder.rs  service.rs  stream.rs  tls.rs
viz/src/tls/: listener.rs  mod.rs  native_tls.rs  rustls.rs
viz/tests/: payload.rs  request.rs  response.rs
(+58 files in other folders)
