[workspace]
members = [
  "viz",
  "viz-core",
  "viz-handlers",
  "viz-macros",
  "viz-router",
  "viz-test",

  "examples/hello-world",
  "examples/unix-socket",
  "examples/static-files/embed",
  "examples/static-files/serve",
  "examples/limits",
  "examples/forms/form",
  "examples/forms/multipart",
  "examples/websocket-chat",
  "examples/sse",
  "examples/session",
  "examples/csrf",
  "examples/cors",
  "examples/rustls",
  "examples/static-routes",
  "examples/routing/todos",
  "examples/routing/openapi",
  "examples/otel/*",
  "examples/compression",
  "examples/templates/*",
  "examples/tracing",
  "examples/graceful-shutdown",
]
resolver = "2"

[workspace.package]
version = "0.5.0-rc.2"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
license = "MIT"

[workspace.dependencies]
viz = { version = "0.5.0-rc.2", path = "viz" }
viz-core = { version = "0.5.0-rc.2", path = "viz-core" }
viz-router = { version = "0.5.0-rc.2", path = "viz-router" }
viz-handlers = { version = "0.5.0-rc.2", path = "viz-handlers", default-features = false }
viz-macros = { version = "0.1", path = "viz-macros" }
viz-test = { version = "0.1", path = "viz-test" }

async-trait = "0.1"
dyn-clone = "1.0"
bytes = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"

# router
path-tree = "0.7"

# http
headers = "0.3"
http = "0.2"
http-body = "=1.0.0-rc.2"
http-body-util = "=0.1.0-rc.3"
hyper = { version = "=1.0.0-rc.4", features = ["server"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", rev = "63e84bf", features = ["auto"] }

futures-util = "0.3"
tokio = { version = "1.33", features = ["net"] }
tokio-tungstenite = "0.20"
tokio-stream = "0.1"
tokio-util = "0.7"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
tokio-native-tls = "0.3"

anyhow = "1.0"
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"

hex = "0.4"
rust-embed = "6.8"

# OpenTelemetry
opentelemetry = { version = "0.20", default-features = false }
opentelemetry-prometheus = { version = "0.13", features = [
  "prometheus-encoding",
] }
opentelemetry-semantic-conventions = { version = "0.12" }
prometheus = "0.13"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

pin-project-lite = "0.2"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
