[package]
name = "examples"
version = "0.1.0-alpha"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2018"
publish = false

[[example]]
name = "hello"
path = "hello.rs"

[dependencies]
viz = { path = "../viz", features = [
  "middleware",
  "middleware-auth",
  "middleware-session",
  "middleware-cookies",
  "middleware-compression",
  "middleware-jwt",
  "fs",
  "sse",
  "ws",
  "uds",
] }

serde = { version = "1.0", features = ["derive"] }
nano-id = "0.1"
ramhorns = "0.12"
bytes = "1.0"
num_cpus = "1"
futures = "0.3"
cfg-if = "1.0"

redis = "0.21"
hyper = { version = "0.14", features = ["stream"] }
tokio = { version = "1.11", features = ["full"] }
tokio-stream = "0.1"
tracing-subscriber = "0.2"
async-stream = "0.3"
pin-project = "1.0"
