[workspace]
members = [
  "cors",
  "csrf",
  "forms/form",
  "hello-world",
  "rustls",
  "serve",
  "session",
  "sse",
  "static-routes",
  "unix-socket",
  "websocket-chat",
]
exclude = ["tls", "target"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
debug = false
panic = "abort"
incremental = false
overflow-checks = false
