[package]
name = "viz-core"
version = "0.1.0-alpha.5"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz Core"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["private-cookies"]

private-cookies = ["cookie/private"]
signed-cookies = ["cookie/signed"]

sse = ["tokio/time"]
ws = ["tokio/rt", "tokio-tungstenite", "pin-project"]

[dependencies]
viz-utils = { path = "../viz-utils", version = "0.1.0-alpha.5" }

handle = "1.0"
form-data = "0.2.3"

bytes = "1.0"
http = "0.2"
headers = "0.3"
mime = "0.3"
toml = "0.5"
hyper = { version = "0.14", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
cookie = { version = "0.15", default-features = false, features = ["percent-encode", "key-expansion"] }

tokio = { version = "1.5", default-features = false, features = ["rt", "time"], optional = true }
tokio-tungstenite = { version = "0.14", optional = true }
pin-project = { version = "1.0", optional = true }

[dev-dependencies]
futures-executor = "0.3"
