[package]
name = "viz-core"
version = "0.2.0-alpha"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz core components"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = [
  "data",
  "limits",
  "params",
  "json",
  "form",
  "query",
  "multipart",
  "websocket",
  "cookie",
  "session",
  "handlers",
]

data = []
limits = []

params = ["serde"]
json = ["serde", "serde_json"]
form = ["serde", "serde_urlencoded"]
query = ["serde", "serde_urlencoded"]
multipart = ["form-data"]
websocket = ["tokio/rt", "tokio-tungstenite"]

cookie = ["libcookie"]
cookie-private = ["libcookie/private"]
cookie-signed = ["libcookie/signed"]

session = ["cookie", "json", "sessions-core", "time"]

csrf = ["cookie"]
cors = []

handlers = ["serve"]
serve = [
  "mime_guess",
  "percent-encoding",
  "tokio-stream",
  "tokio-util/io",
  "tokio/fs",
  "tokio/io-util",
]

[dependencies]
thiserror = "1.0.31"
async-trait = "0.1.56"
dyn-clone = "1.0.6"
http = "0.2.7"
headers = "0.3.7"
http-body = "0.4"
hyper = { version = "0.14", features = ["stream"] }
mime = "0.3.16"
bytes = "1.1.0"
time = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
form-data = { version = "0.4.0", optional = true }
sessions-core = { version = "0.3.4", optional = true }
futures-util = "0.3.21"
libcookie = { package = "cookie", version = "0.16.0", features = [
  "percent-encode",
], optional = true }
getrandom = "0.2.7"
base64 = "0.13.0"
mime_guess = { version = "2.0", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
tokio = { version = "1.20", optional = true }
tokio-stream = { version = "0.1.9", optional = true }
tokio-util = { version = "0.7.3", optional = true }
tokio-tungstenite = { version = "0.17.2", optional = true }
# TODO: EmbedHandler
rust-embed = { version = "6.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0.63"
