[package]
name = "viz-middleware"
version = "0.1.0-alpha.4"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz Middleware"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = [
  "logger",
  "recover",
  "request_id",
  "timeout"
]

logger = []
recover = []
request_id = ["uuid"]
timeout = ["tokio/time"]

cookies = []
session = ["sessions"]

auth = []
cors = []
compression = [
  "async-compression",
  "bytes",
  "pin-project",
  "tokio-util/io"
]

jwt = ["jsonwebtoken", "jwt-header"]
jwt-header = []
jwt-query = []
jwt-param = []
jwt-cookie = []

[dependencies]
viz-core = { path = "../viz-core", version = "0.1.0-alpha.4" }
viz-utils = { path = "../viz-utils", version = "0.1.0-alpha.4" }

serde = "1.0"
uuid = { version = "0.8", features = ["v4"], optional = true }

sessions = { version = "0.1.7", features = ["redis"], optional = true }

tokio = { version = "1.4", features = ["time"], optional = true }
tokio-util = { version = "0.6", features = ["io"], optional = true }

# compression
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"], optional = true }
bytes = { version = "1.0", optional = true }
pin-project = { version = "1.0", optional = true }

# jwt
jsonwebtoken = { version = "7.2", optional = true }
