[package]
name = "viz-router"
version = "0.1.2"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz Router"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
viz-core = { path = "../viz-core", version = "0.1.2" }
viz-utils = { path = "../viz-utils", version = "0.1.2" }
path-tree = "0.2.2"

[dev-dependencies]
futures-executor = "0.3"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.14"
