[package]
name = "viz-router"
version = "0.2.0-alpha"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz Router"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["ext"]

ext = []

[dependencies]
viz-core = { path = "../viz-core" }
path-tree = "0.4"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
