[package]
name = "viz-utils"
version = "0.1.0-alpha"
authors = ["Fangdun Sai <cfddream@gmail.com>"]
description = "Viz utils"
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
anyhow = "1"
thiserror = "1"

futures-util = { version = "0.3", default-features = false, features = ["sink"] }

serde_json = "1.0"
serde_urlencoded = "0.6"

log = "0.4"
pretty_env_logger = "0.4"
