[package]
name = "viz-utils"
version = "0.1.0-alpha.12"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz utils"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["error", "serde", "futures", "tracing"]
error = ["thiserror"]
serde = ["serde_json", "serde_urlencoded"]
futures = ["futures-util"]

[dependencies]
anyhow = "1.0"
thiserror = { version = "1.0", optional = true }

futures-util = { version = "0.3", default-features = false, features = [
    "sink",
], optional = true }

serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

tracing = { version = "0.1", optional = true }
