[package]
name = "viz"
version = "0.1.0-alpha.11"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Fast, flexible, minimalist web framework for Rust"
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
keywords = ["viz", "http", "web", "framework", "async"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-server",
]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["tcp", "http1"]

sse = ["viz-core/sse"]
ws = ["viz-core/ws"]
fs = ["viz-core/fs"]
tcp = ["hyper/tcp"]
uds = ["hyper/stream", "tokio/net"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

middleware = ["viz-middleware/default"]

middleware-full = [
  "middleware",
  "middleware-auth",
  "middleware-cors",
  "middleware-cookies",
  "middleware-sessions",
  "middleware-compression",
]

middleware-auth = ["viz-middleware/auth"]
middleware-cors = ["viz-middleware/cors"]
middleware-cookies = ["viz-middleware/cookies"]
middleware-sessions = ["viz-middleware/sessions"]

middleware-jwt = ["viz-middleware/jwt"]
middleware-jwt-param = ["viz-middleware/jwt-param"]
middleware-jwt-query = ["viz-middleware/jwt-query"]
middleware-jwt-cookie = ["viz-middleware/jwt-cookie"]
middleware-jwt-header = ["viz-middleware/jwt-header"]

middleware-compression = ["viz-middleware/compression"]
middleware-compression-gzip = ["viz-middleware/compression-gzip"]
middleware-compression-brotli = ["viz-middleware/compression-brotli"]
middleware-compression-deflate = ["viz-middleware/compression-deflate"]

[dependencies]
viz-core = { path = "../viz-core", version = "0.1.0-alpha.10" }
viz-router = { path = "../viz-router", version = "0.1.0-alpha.10" }
viz-utils = { path = "../viz-utils", version = "0.1.0-alpha.10" }
viz-middleware = { path = "../viz-middleware", version = "0.1.0-alpha.10", default-features = false, optional = true }

hyper = { version = "0.14", features = ["server"] }
tower-service = "0.3"

tokio = { version = "1.11", default-features = false, features = ["net"], optional = true }
