[package]
name = "viz"
version = "0.2.0-alpha"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Fast, flexible, minimalist web framework for Rust"
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
keywords = ["viz", "http", "web", "framework", "async"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-server",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
default = [
  "http1",
  "data",
  "query",
  "form",
  "json",
  "params",
  "multipart",
  "cookie",
  "session",
]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

data = ["viz-core/data"]
query = ["viz-core/query"]
form = ["viz-core/form"]
json = ["viz-core/json"]
params = ["viz-core/params"]
multipart = ["viz-core/form-data"]
websocket = ["viz-core/websocket"]
sse = ["viz-core/sse"]

cookie = ["viz-core/cookie"]
cookie-private = ["viz-core/cookie-private"]
cookie-signed = ["viz-core/cookie-signed"]

session = ["cookie", "viz-core/session"]
csrf = ["cookie", "viz-core/csrf"]
cors = ["viz-core/cors"]

unix-socket = []

router-ext = ["viz-router/ext"]

macros = ["viz-macros"]
handlers = ["viz-handlers"]

rustls = ["rustls-pemfile", "tokio-rustls", "futures-core"]
native-tls = ["tokio-native-tls", "futures-core"]

[dependencies]
viz-core = { path = "../viz-core", version = "0.2.0-alpha" }
viz-router = { path = "../viz-router", version = "0.2.0-alpha" }
viz-macros = { path = "../viz-macros", version = "0.1.0-alpha", optional = true }
viz-handlers = { path = "../viz-handlers", version = "0.1.0-alpha", optional = true }
hyper = { version = "0.14", features = ["tcp", "server", "stream"] }
tokio = { version = "1.20", features = ["net"] }

tokio-rustls = { version = "0.23.4", optional = true }
rustls-pemfile = { version = "1.0.0", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
futures-core = { version = "0.3.21", default-features = false, optional = true }
futures-util = "0.3.21"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
