[package]
name = "app"
version = "0.1.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
publish = false

[features]
default = ["viz/tcp", "viz/http1"]
uds = ["viz/uds", "viz/http2"]

[dependencies]
viz = { path = "../../viz", default-features = false, features = [
  "middleware",
  "middleware-auth",
  "middleware-cookies",
  "middleware-sessions",
  "middleware-sessions-redis",
  "middleware-jwt",
  "middleware-jwt-header",
  "middleware-compression",
  "middleware-compression-brotli",
  "fs",
  "sse",
  "ws",
] }

serde = { version = "1.0", features = ["derive"] }
nano-id = "0.2"
ramhorns = "0.12"
bytes = "1.0"
num_cpus = "1"
futures = "0.3"
cfg-if = "1.0"

redis = "0.21"
tokio = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing-subscriber = "0.2"
async-stream = "0.3"
pin-project = "1.0"
