[package]
name = "async-graphql-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
viz = { version = "0.1.0-alpha.13" }
async-graphql-viz = { version = "0.1.0-alpha.13" }

async-graphql = "2.10.0"

slab = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
