[package]
name = "oauth"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
viz = { path = "../../viz" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
oxide-auth = "0.5"
serde_urlencoded = "0.7"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11"
thiserror = "1.0"
mime = "0.3.16"
