[package]
name = "session"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = { path = "../../viz", features = ["session"] }
sessions = { version = "0.3.4", features = ["memory"] }
# viz-session = { path = "../../viz-session", features = ["memory"] }

tokio = { version = "1.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
nano-id = "0.2.1"
