[package]
name = "sessions"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = { path = "../../viz", features = ["middleware", "middleware-cookies", "middleware-sessions", "middleware-sessions-memory"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
nano-id = "0.2.0"
tracing-subscriber = "0.2"
