[package]
name = "sse"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = { path = "../../viz", features = ["sse"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
mime = "0.3"
systemstat = { version = "0.1", features = ["serde"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"
