[package]
name = "sea-orm-example"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viz = { workspace = true, features = ["serve"] }
serde.workspace = true

tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
sea-orm = { version = "0.12.7", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[lints]
workspace = true
